Edit /doc/api.yaml and relative changes on service/
