# service/api/unfollowUser.go
@@ -58,7 +58,7 @@ func (rt *_router) unfollowUser(w http.ResponseWriter, r *http.Request, ps httpr
 		return
 	}
 
-	c, errC := rt.db.CheckBanned(dbuser.Username, dbuserAuth.Username)
+	c, errC := rt.db.CheckBanned(dbuserAuth.Username, dbuserFo.Username)
 	if errC != nil {
 		// In this case, we have an error on our side. Log the error (so we can be notified) and send a 500 to the user
 		// Note: we are using the "logger" inside the "ctx" (context) because the scope of this issue is the request.
